--- a/less/index.less
+++ b/less/index.less
@@ -153,6 +153,7 @@ body {
 p {
   font-size: 1.65rem;
 }
+
 h2 {
   font-size: 2.75rem;
 }
@@ -162,6 +163,21 @@ h1 {
 h3 {
   font-size: 2rem;
 }
+h1,
+h2,
+h3 {
+  padding-bottom: 5px;
+}
+li {
+  font-size: 1.65rem;
+  width: 50%;
+  list-style-type: disc;
+  list-style-position: inside;
+}
+ul {
+  display: flex;
+  flex-wrap: wrap;
+}
 
 header,
 footer {
@@ -169,6 +185,7 @@ footer {
     display: flex;
     align-self: flex-end;
     padding: 0% 0% 0% 40%;
+    width: 100%;
     a {
       text-decoration: none;
       color: black;
@@ -197,30 +214,34 @@ footer {
   margin: 5% 0%;
   padding-bottom: 5%;
   border-bottom: 2px solid gray;
-  div {
-    width: 50%;
-  }
+
   .aboutInfo {
+    width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    padding: 5% 0%;
+    justify-content: space-between;
+    padding: 4% 0%;
+
+    .skills {
+      display: flex;
+      flex-direction: column;
+      h3 {
+        padding-bottom: 5px;
+      }
+    }
   }
 }
 
 #portfolio {
-  .bordered();
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   .projects {
-    .bordered();
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     .project {
-      .bordered;
       width: 40%;
       padding: 5%;
       img {
