--- a/css/index.css
+++ b/css/index.css
@@ -172,7 +172,6 @@ header nav,
 footer nav {
   display: flex;
   align-self: flex-end;
-  padding: 0% 0% 0% 40%;
   width: 100%;
 }
 header nav a,
@@ -189,30 +188,33 @@ footer nav a:hover {
 }
 header {
   border-bottom: 2px solid gray;
+  padding-bottom: 2.5%;
   margin-bottom: 5%;
 }
 footer {
   border-top: 2px solid gray;
   margin-top: 5%;
   margin-bottom: 2.5%;
+  padding-top: 2.5%;
 }
 #about {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 5% 0%;
   padding-bottom: 5%;
   border-bottom: 2px solid gray;
 }
 #about .aboutInfo {
-  width: 50%;
+  width: 40%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 4% 0%;
 }
 #about .aboutInfo .skills {
   display: flex;
   flex-direction: column;
+  padding-top: 20px;
 }
 #about .aboutInfo .skills h3 {
   padding-bottom: 5px;
@@ -221,24 +223,45 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  border-bottom: 2px solid gray;
 }
 #portfolio .projects {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
+  padding-bottom: 5%;
 }
 #portfolio .projects .project {
   width: 40%;
   padding: 5%;
+  margin-bottom: 5%;
+  border-bottom: 1px solid gray;
 }
 #portfolio .projects .project img {
   width: 100%;
+  margin-bottom: 25px;
 }
 #contact {
   display: flex;
   flex-direction: column;
+  margin-top: 5%;
 }
 #contact .contactInfo {
   display: flex;
+  justify-content: space-between;
+  padding-top: 5%;
+}
+#contact .contactInfo .form {
+  width: 50%;
+}
+#contact .contactInfo a {
+  text-decoration: none;
+  color: black;
+  padding: 10px 30px;
+  font-size: 2rem;
+}
+#contact .contactInfo a:hover {
+  background-color: black;
+  color: white;
 }
