--- a/less/index.less
+++ b/less/index.less
@@ -139,6 +139,19 @@ table {
   border: 1px solid black;
 }
 
+.linked() {
+  a {
+    text-decoration: none;
+    color: black;
+    padding: 10px 30px;
+    font-size: 2rem;
+  }
+  a:hover {
+    background-color: black;
+    color: white;
+  }
+}
+
 html,
 body {
   height: 100%;
@@ -148,6 +161,9 @@ html {
 }
 body {
   padding: 5% 10% 5% 10%;
+}
+
+.body {
 }
 
 p {
@@ -184,47 +200,43 @@ footer {
   nav {
     display: flex;
     align-self: flex-end;
-    padding: 0% 0% 0% 40%;
     width: 100%;
-    a {
-      text-decoration: none;
-      color: black;
-      padding: 10px 30px;
-      font-size: 2rem;
-    }
-    a:hover {
-      background-color: black;
-      color: white;
-    }
+    .linked();
   }
 }
 header {
   border-bottom: 2px solid gray;
+  padding-bottom: 2.5%;
   margin-bottom: 5%;
 }
 footer {
   border-top: 2px solid gray;
   margin-top: 5%;
   margin-bottom: 2.5%;
+  padding-top: 2.5%;
 }
 
 #about {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 5% 0%;
   padding-bottom: 5%;
   border-bottom: 2px solid gray;
 
+  div img {
+  }
+
   .aboutInfo {
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 4% 0%;
 
     .skills {
       display: flex;
       flex-direction: column;
+      padding-top: 20px;
       h3 {
         padding-bottom: 5px;
       }
@@ -236,16 +248,21 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  border-bottom: 2px solid gray;
   .projects {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    padding-bottom: 5%;
     .project {
       width: 40%;
       padding: 5%;
+      margin-bottom: 5%;
+      border-bottom: 1px solid gray;
       img {
         width: 100%;
+        margin-bottom: 25px;
       }
     }
   }
@@ -254,7 +271,14 @@ footer {
 #contact {
   display: flex;
   flex-direction: column;
+  margin-top: 5%;
   .contactInfo {
     display: flex;
+    justify-content: space-between;
+    padding-top: 5%;
+    .form {
+      width: 50%;
+    }
+    .linked();
   }
 }
