--- a/css/index.css
+++ b/css/index.css
@@ -191,6 +191,7 @@ footer nav a:hover {
   footer nav {
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
   }
   header nav a,
   footer nav a {
@@ -234,6 +235,7 @@ footer {
   #about {
     flex-direction: column;
     align-items: center;
+    margin-top: 30px;
   }
   #about .aboutInfo {
     width: 100%;
