--- a/less/index.less
+++ b/less/index.less
@@ -205,6 +205,7 @@ footer {
     @media screen and (max-width: 500px) {
       flex-direction: column;
       align-items: center;
+      margin-bottom: 20px;
       a {
         border-bottom: 1px solid gray;
       }
@@ -248,6 +249,7 @@ footer {
   @media screen and (max-width: 500px) {
     flex-direction: column;
     align-items: center;
+    margin-top: 30px;
     .aboutInfo {
       width: 100%;
     }
