--- a/less/index.less
+++ b/less/index.less
@@ -158,6 +158,7 @@ body {
 }
 html {
   font-size: 62.5%;
+  font-family: "Nanum Gothic", sans-serif;
 }
 body {
   padding: 5% 10% 5% 10%;
@@ -309,11 +310,13 @@ footer {
     padding-top: 5%;
     .form {
       width: 50%;
+      form {
+        font-size: 2rem;
+      }
     }
     .linked();
     @media screen and (max-width: 500px) {
       flex-direction: column;
-      align-items: center;
       margin-bottom: 20px;
       .form {
         margin-bottom: 30px;
