added work history section

--- a/css/index.css
+++ b/css/index.css
@@ -134,6 +134,7 @@ table {
 html,
 body {
   height: 100%;
+  line-height: 1.65;
 }
 html {
   font-size: 62.5%;
@@ -241,6 +242,21 @@ footer {
   #about .aboutInfo {
     width: 100%;
   }
+}
+#workHistory {
+  padding-bottom: 5%;
+  margin: 5% 0%;
+  border-bottom: 2px solid gray;
+}
+#workHistory h2 {
+  padding-bottom: 2.5%;
+}
+#workHistory table {
+  font-size: 1.65rem;
+}
+#workHistory table .labels {
+  font-weight: bold;
+  text-align: left;
 }
 #portfolio {
   display: flex;
