--- a/less/index.less
+++ b/less/index.less
@@ -155,6 +155,7 @@ table {
 html,
 body {
   height: 100%;
+  line-height: 1.65;
 }
 html {
   font-size: 62.5%;
@@ -253,6 +254,22 @@ footer {
     margin-top: 30px;
     .aboutInfo {
       width: 100%;
+    }
+  }
+}
+
+#workHistory {
+  padding-bottom: 5%;
+  margin: 5% 0%;
+  border-bottom: 2px solid gray;
+  h2 {
+    padding-bottom: 2.5%;
+  }
+  table {
+    font-size: 1.65rem;
+    .labels {
+      font-weight: bold;
+      text-align: left;
     }
   }
 }
