--- a/css/index.css
+++ b/css/index.css
@@ -202,11 +202,10 @@ footer nav a:hover {
 }
 header {
   border-bottom: 2px solid gray;
-  padding-bottom: 2.5%;
-  margin-bottom: 5%;
+  padding-bottom: 5%;
+  margin-bottom: 2.5%;
 }
 footer {
-  border-top: 2px solid gray;
   margin-top: 5%;
   margin-bottom: 2.5%;
   padding-top: 2.5%;
@@ -215,8 +214,8 @@ footer {
   display: flex;
   justify-content: space-around;
   margin: 5% 0%;
-  padding-bottom: 5%;
   border-bottom: 2px solid gray;
+  padding-bottom: 5%;
 }
 #about .aboutInfo {
   width: 40%;
@@ -244,9 +243,10 @@ footer {
   }
 }
 #workHistory {
-  padding-bottom: 5%;
-  margin: 5% 0%;
   border-bottom: 2px solid gray;
+  padding-bottom: 5%;
+  padding-bottom: 10%;
+  margin: 5% 0%;
 }
 #workHistory h2 {
   padding-bottom: 2.5%;
@@ -263,6 +263,7 @@ footer {
   flex-direction: column;
   justify-content: space-evenly;
   border-bottom: 2px solid gray;
+  padding-bottom: 5%;
 }
 #portfolio .projects {
   display: flex;
@@ -314,6 +315,8 @@ footer {
   display: flex;
   flex-direction: column;
   margin-top: 5%;
+  border-bottom: 2px solid gray;
+  padding-bottom: 5%;
 }
 #contact .contactInfo {
   display: flex;
