added @standard-font-size variable, cleaned up contact info a little more

--- a/css/index.css
+++ b/css/index.css
@@ -130,7 +130,8 @@ table {
 * {
   box-sizing: border-box;
 }
-/*Mixins*/
+/* Variables */
+/* Mixins */
 html,
 body {
   height: 100%;
@@ -340,6 +341,10 @@ footer {
 }
 #contact .contactInfo .form form {
   font-size: 2rem;
+}
+#contact .contactInfo .links {
+  display: flex;
+  flex-direction: column;
 }
 #contact .contactInfo .links h3 {
   text-align: center;
