--- a/less/index.less
+++ b/less/index.less
@@ -134,7 +134,10 @@ table {
   box-sizing: border-box;
 }
 
-/*Mixins*/
+/* Variables */
+@standard-font-size: 1.65rem;
+
+/* Mixins */
 .bordered() {
   border-bottom: 2px solid gray;
   padding-bottom: 5%;
@@ -170,7 +173,7 @@ body {
 }
 
 p {
-  font-size: 1.65rem;
+  font-size: @standard-font-size;
 }
 
 h2 {
@@ -188,7 +191,7 @@ h3 {
   padding-bottom: 5px;
 }
 li {
-  font-size: 1.65rem;
+  font-size: @standard-font-size;
   width: 50%;
   list-style-type: disc;
   list-style-position: inside;
@@ -268,7 +271,7 @@ footer {
     padding-bottom: 2.5%;
   }
   table {
-    font-size: 1.65rem;
+    font-size: @standard-font-size;
     .labels {
       font-weight: bold;
       text-align: left;
@@ -343,6 +346,9 @@ footer {
     }
 
     .links {
+      display: flex;
+      flex-direction: column;
+
       h3 {
         text-align: center;
         border-bottom: 1px solid black;
