--- a/less/index.less
+++ b/less/index.less
@@ -181,7 +181,7 @@ p {
 }
 
 h2 {
-  font-size: 2.75rem;
+  font-size: 3rem;
 }
 h1 {
   font-size: 4rem;
@@ -193,6 +193,10 @@ h1,
 h2,
 h3 {
   padding-bottom: 5px;
+}
+h1,
+h2 {
+  font-family: "Libre Caslon Display", serif;
 }
 li {
   font-size: @standard-font-size;
@@ -262,6 +266,15 @@ footer {
     flex-direction: column;
     align-items: center;
     margin-top: 30px;
+
+    img {
+      margin-top: 7%;
+      height: 40vh;
+    }
+
+    h1 {
+      text-align: center;
+    }
 
     .aboutInfo {
       width: 100%;
@@ -377,6 +390,10 @@ footer {
 
       form {
         font-size: 2rem;
+      }
+
+      input {
+        font-size: 1.65rem;
       }
     }
 
