--- a/less/index.less
+++ b/less/index.less
@@ -170,7 +170,8 @@ html {
   }
 }
 body {
-  padding: 5% 10% 5% 10%;
+  //padding: 5% 10% 5% 10%;
+  margin: 2.5% 10% auto;
 }
 
 .body {
@@ -339,6 +340,8 @@ footer {
     justify-content: space-evenly;
     align-items: center;
     padding-bottom: 5%;
+    .linked();
+
     .project {
       display: flex;
       flex-direction: column;
@@ -349,6 +352,7 @@ footer {
       margin-bottom: 5%;
       border-bottom: 1px solid gray;
       .linked();
+
       h3 {
         text-align: center;
       }
@@ -358,6 +362,14 @@ footer {
       img {
         width: 100%;
         margin-bottom: 25px;
+      }
+    }
+    .project:hover {
+      background-color: black;
+      color: white;
+
+      a {
+        color: white;
       }
     }
     @media screen and (max-width: 1000px) {
@@ -394,6 +406,19 @@ footer {
 
       input {
         font-size: 1.65rem;
+      }
+
+      input[type="submit"] {
+        text-decoration: none;
+        background-color: white;
+        color: black;
+        padding: 10px 30px;
+        font-size: 2rem;
+      }
+
+      input[type="submit"]:hover {
+        background-color: black;
+        color: white;
       }
     }
 
