--- a/less/index.less
+++ b/less/index.less
@@ -338,8 +338,8 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: center;
-    padding-bottom: 5%;
+    align-items: flex-end;
+    padding-top: 2.5%;
     .linked();
 
     .project {
