made a links in mobile width 100%

--- a/css/index.css
+++ b/css/index.css
@@ -208,6 +208,8 @@ footer nav a:hover {
   header nav a,
   footer nav a {
     border-bottom: 1px solid gray;
+    width: 100%;
+    text-align: center;
   }
 }
 header {
@@ -329,7 +331,7 @@ footer {
 #portfolio .projects .project {
   display: flex;
   flex-direction: column;
-  justify-content: evenly;
+  justify-content: space-evenly;
   align-items: center;
   width: 40%;
   padding: 5%;
