--- a/less/index.less
+++ b/less/index.less
@@ -223,6 +223,8 @@ footer {
       margin-bottom: 20px;
       a {
         border-bottom: 1px solid gray;
+        width: 100%;
+        text-align: center;
       }
     }
   }
@@ -345,7 +347,7 @@ footer {
     .project {
       display: flex;
       flex-direction: column;
-      justify-content: evenly;
+      justify-content: space-evenly;
       align-items: center;
       width: 40%;
       padding: 5%;
