added new media queries for different screen sizes

--- a/less/index.less
+++ b/less/index.less
@@ -263,7 +263,10 @@ footer {
         margin-bottom: 2.5%;
       }
     }
-  }
+
+    img {
+	padding: 4% 0%;
+    }
 
   @media screen and (max-width: 1000px) {
     flex-direction: column;
